--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
 
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vanilla App Template</title>
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
 
-    <load src="./partials/footer.html" />
+<body>
 
-    <script type="module" src="main.js"></script>
-  </body>
+  <load src="./partials/header.html" />
+
+  <main>
+    <load src="./partials/hero.html" />
+    <load src="./partials/features.html" />
+    <load src="./partials/team.html" />
+    <load src="./partials/portfolio.html" />
+    <load src="./partials/badges.html" />
+  </main>
+
+  <load src="./partials/footer.html" />
+
+  <script type="module" src="main.js"></script>
+</body>
+
 </html>
